# mflux-commander

./: .coverage  .gitignore  README.md  mflux-wrapper.py  mise.toml  pyproject.toml  requirements.txt  setup.py  test_mflux_wrapper.py
.github/workflows/: publish.yml
docs/: 2_voice_chat.md  3_spec.md  4_spec_to_plan.md  5_plan.md  usage_example.md
src/mflux_commander/: __init__.py
src/mflux_commander.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mflux_commander/cli/: generate.py  main.py
src/mflux_commander/core/: brainstorm.py  config.py  generator.py  session.py  styles.py
src/mflux_commander/utils/: gallery.py
tests/: conftest.py  test_config.py  test_gallery.py  test_generator.py  test_session.py  test_styles.py
